fix : row gap

--- a/src/scss/History.scss
+++ b/src/scss/History.scss
@@ -26,13 +26,12 @@ section {
   }
 
   .image-bg {
+    display: grid;
+    padding: 2rem;
+    row-gap: 1rem;
     
-    padding: 1.5rem 2rem;
-    
-
     .image {
-      margin: 2rem 1rem 10px;
-      position: relative;
+      margin: 1.5rem;
       text-align: center;
       box-shadow: 20px 20px 0 $January;
 
